fix: update tests to meet the changes